crates/kul-core/tests/snapshots/validator__rule_01_duplicate_id_cross_kind.snap
---
source: crates/kul-core/tests/validator.rs
expression: render_diagnostics(&result.diagnostics)
---
KUL-R01 [88..93]: id `alice` is already used by a person — pick a different id (every id must be unique across the project)
  related [7..12]: first declared here as a person
