crates/kul-core/tests/snapshots/validator__rule_01_duplicate_person_id.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 105
expression: render_diagnostics(&result.diagnostics)
---
KUL-R01 [47..52]: id `alice` is already used by another person — pick a different id (every id must be unique across all persons and marriages)
  related [7..12]: first declared here as a person
