crates/kul-core/tests/snapshots/validator__rule_02_wrong_kind_references.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 141
expression: render_diagnostics(&result.diagnostics)
---
KUL-R02 [222..227]: `alice` is a person, not a marriage — `birth` links must reference a marriage id
  related [7..12]: `alice` declared as a person here
KUL-R02 [296..307]: `m_alice_bob` is a marriage, not a person — spouses must reference declared persons
  related [88..99]: `m_alice_bob` declared as a marriage here
