crates/kul-core/tests/snapshots/validator__rule_03_marriage_missing_start.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 127
expression: render_diagnostics(&result.diagnostics)
---
KUL-R03 [71..72]: marriage `m` needs a `start:` date — add `start:YYYY` (or a fuller `YYYY-MM-DD`)
