crates/kul-core/tests/snapshots/validator__rule_03_missing_both.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 54
expression: render_diagnostics(&result.diagnostics)
---
KUL-R03 [7..12]: person `carol` needs a `name:` field — add `name:"…"` to the declaration
KUL-R03 [7..12]: person `carol` needs a `gender:` field — use `gender:male`, `gender:female`, or `gender:other`
