crates/kul-core/tests/snapshots/validator__rule_03_missing_gender.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 47
expression: render_diagnostics(&result.diagnostics)
---
KUL-R03 [7..10]: person `bob` needs a `gender:` field — use `gender:male`, `gender:female`, or `gender:other`
