crates/kul-core/tests/snapshots/validator__rule_03_missing_name.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 40
expression: render_diagnostics(&result.diagnostics)
---
KUL-R03 [7..12]: person `alice` needs a `name:` field — add `name:"…"` to the declaration
