crates/kul-core/tests/snapshots/validator__rule_05_end_without_reason.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 279
expression: render_diagnostics(&result.diagnostics)
---
KUL-R05 [131..141]: marriage `m_alice_bob` has an `end:` date but no `end_reason:` — add `end_reason:divorce`
